ImpressCMS ChangeLog

=============================================
2008-05-22 : ImpressCMS 1.1 Alpha 1
=============================================

- Added : New permission category in System Admin > Groups to configure what groups can be configured by a specific group (nekro)
- Added : IcmsFeed for module developers (nachenko)
- Added : ImpressCMS now using UTF-8 encoding as default encoding.  (stranger)
- Added : icms_createSalt function to generate a unique random salt key. (vaughan)
- Added : icms_getUserSaltFromUname function to get the users unique salt key for logging in. (vaughan)
- Added : icms_encryptPass function to add the salts & encrypt password using sha256 (vaughan)
- Added : Unique Salt key to users table. (vaughan)
- Added : Unique Salt key to mainfile/sdata trust path for use with Password encryption. (vaughan)
- Added : HTML Purifier (vaughan)
- Added : enable sha256 choice in admin preferences user settings. default = yes sha256, no = md5 (basic). (vaughan)
- Added : Prototype Library (Updated to the last version , and removed old prototype files from other places like install and scriptaculous library). (nekro)
- Added : Projax Library to integrate better Scriptaculous in php. (nekro)
- Added : The configuration to enable or disable the userinfo.php view by anonymous users. (nekro)
- Added : Feature to select rights for different groups and modules for the debug. (nekro)
- Added : Location for Third Party Libraries (malanciault/davidl2)
- Added : Including Scriptaculous library
- Added : Feature to select the editor in the preferences. (nekro)
- Added : The XOOPS_EDITOR_PATH and XOOPS_EDITOR_URL constants. (nekro)
- Added : The /editors folder. (nekro)
- Added : The TinyMCE editor. (nekro)
- Added : Feature to select in which modules the groups can use the editor. (real_therplima)
- Added : Autoselection of system language depending the browser language configuration. (if multilanguage enabled). (nekro)